[package]
name = "rusty_road_race"
version = "0.1.0"
edition = "2021"
authors = ["graeme@sigma957.net"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: `dynamic_linking` should be removed for release builds
# See: https://bevyengine.org/learn/book/getting-started/setup/
bevy = { version = "0.11.0", features = ["dynamic_linking"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
